@@ -6,6 +6,9 @@ Version 3.2.9 - yy xxx 2016
 - fix early rounding while importing CSV data
 - fix CSV import capability using relative time stamp
 - add Raspbian 32 ARM build support 
+
+HoTTAdapter2
+	- fine tune capacity filter for cases value start != 0
 S32 (JLog3)
 	- add support
 SM GPS-Logger 1+2 
